# FreeCAD-genetic-algorithm_FEA

./: .gitattributes  .gitignore  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
add-on/: Workbench
examples/CrankShaft/: main.py
examples/linkage/: main.py
examples/notch/: main.py
examples/notch/results/: ga_results.csv  results.csv
genetic_FEA/: freecadmodel.py  genetic_algorithm.py  main.py  output.py  parametric.py  parametric_analysis.py  run_all.py  variable.py
