[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freecad-genetic-algorithm"
version = "0.1.0"
description = "A project integrating FreeCAD and Genetic Algorithms for parametric geometry optimization."
readme = "README.md"
authors = [
    { name = "Giuseppe Rumore" }
]
license = { file = "LICENSE" }
keywords = ["freecad", "genetic algorithm", "parametric optimization", "fea"]
dependencies = [
    "numpy == 1.24.1",
    "pandas == 1.5.3",
    "plotly == 5.13.0",
    "deap == 1.3.1",
    "tqdm == 4.64.1",
    "pyside2 == 5.15.2.1",
    "python-dateutil == 2.8.2",
    "pytz == 2022.7.1",
    "shiboken2 == 5.15.2.1",
    "tenacity == 8.1.0",
    "six == 1.16.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["freecad_genetic_algorithm"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "freecad_genetic_algorithm.__version__"}

[tool.setuptools.scripts]
run_analysis = "freecad_genetic_algorithm.main:run"

[project.optional-dependencies]
dev = [
    "pytest >=6.0",
    "flake8 >=3.9.2",
    "black >=21.5b2",
    "mypy >=0.800",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
testpaths = [
    "tests",
]
