[tool.poetry]
name = "genetic_algorithm_FreeCAD_FEA"
version = "0.1.0"
description = "A project to run genetic algorithms with FreeCAD FEA models"
authors = ["Giuseppe Rumore"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "^1.24"
pandas = "^1.5"
plotly = "^5.13"
pyside2 = "^5.15"
shiboken2 = "^5.15"
deap = "^1.3.1"
flake8 = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
sphinx = "^5.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.core.masonry.api"




